--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -7,8 +7,11 @@
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:clickable="true"
+    android:elevation="2dp"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:foreground="?selectableItemBackground"
+
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +23,10 @@
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@color/photo_placeholder" />
+            android:background="@color/photo_placeholder"
+            android:transitionName="mymaintrans"
+            android:scaleType="centerCrop"
+            />
 
         <TextView
             android:id="@+id/article_title"
