correct elevation values

--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -11,6 +11,7 @@
             app:layout_scrollFlags="scroll|snap"
             android:id="@+id/toolbar_container"
             android:stateListAnimator="@drawable/appbar_elevation"
+            android:elevation="4dp"
 
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:fitsSystemWindows="true">
